--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Music Player built with React and Tailwind CSS"
     />
-    <title>Music Player</title>
+    <title>DJ Bot</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
